fix(styles): list spacing and alignment. Fixes #1282

--- a/packages/styles/scss/components/_list.scss
+++ b/packages/styles/scss/components/_list.scss
@@ -24,7 +24,7 @@
 
     &__dark {
       color: var(--ilo-color-white);
-      @include invincible-list(rgba(255, 255, 255, 1));
+      @include invincible-list(var(--ilo-color-white));
     }
   }
 
